# aoc-initializer

./: Cargo.toml  README.md
src/: main.rs  template_main
